--- a/.gitignore
+++ b/.gitignore
@@ -244,6 +244,7 @@ local.properties
 .cache-main
 .scala_dependencies
 .worksheet
+.bsp/
 
 # Uncomment this line if you wish to ignore the project description file.
 # Typically, this file would be tracked if it contains build/dependency configurations:
